--- a/index.html
+++ b/index.html
@@ -1,2 +1,81 @@
-
-<h1>heoll word</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="1.css"
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<h3>, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <div class="class1">
+        <div class="class4">
+         <img src="4.jpg">
+        </div>
+        <h1>个人信息</h1>
+        
+        <br/>
+         <ul>
+         <li>姓名:李承泰</li>
+         <br/>
+         <li>出生年月:1999/7/29</li>
+         <br/>
+         <li>籍贯：四川成都/li>
+         <br/>
+         <li>学历：专科</li>
+         <br/>
+         <li>民族：汉</li>
+         </ul>
+         <br/>
+         <h1>联系方式</h1>
+         <ul>
+         <li>qq：1327154578</li>
+         <br/>
+         <li>电话：13032822938</li>
+         <br/>
+         <li>微信：5182930123</li>
+         <br/>
+         <li>地址：四川成都</li>
+         </ul>
+         <br/>
+         <h1>兴趣爱好</h1>
+         <div class="pic">
+         <ul>
+          <li>篮球</li>
+          <li>健身</li>
+          <li>音乐</li>
+         </ul>
+        </div>
+    </div>
+    <div class="class3">
+        <h1>个人简历</h1>
+    </div>
+    <div class="class2">
+    <br/>
+    <br/>
+    <h1>自我评价</h1>
+    <br/>
+    <hr/>
+    <p>
+        本人性格开朗、诚实正直、做事认真踏实、工作兢兢业业、<br/>有较强的组织能力、写作能力和团队协作精神，能迅速的<br/>适应各种环境并融合其中。自参加工作以来，所受到的教<br/>育及锻炼使我能够熟练的管理工作，能独立处理工作中出<br/>现的问题。
+    </p>
+    <h1>教育经历</h1>
+    <br/>
+    <hr/>
+    <p>
+        大学院校：乐山职业技术学院 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;        时间：在读
+    </p>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <h1>工作经验</h1>
+    <br/>
+    <hr/>
+    <p>
+        工作时间：暂无&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;        <br/>
+        工作时间：暂无&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;        
+    </p>
+    </div>
+</body>
+</html>
